fix (#215): add background fix for text contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -115,6 +115,11 @@ section {
   margin: 0 auto;
 }
 
+.section-contain.is-dark {
+  padding: 30px;
+  background-color: rgba(25, 25, 25, 0.8);
+}
+
 p {
   padding-bottom: 1.5rem;
 }
@@ -207,13 +212,18 @@ p {
   margin-top: 100px;
 }
 
+.marginbottom-sm {
+  margin-bottom: 30px;
+}
+
 .px3 {
   padding-left: 3rem;
   padding-right: 3rem;
 }
 
 .prose p {
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
+  padding-bottom: 0;
 }
 
 /* ---- SVG STYLES ----- */
